--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 ##Spring Custom properties to be mentioned below##
 server.port=8085
 server.context-path=/toyRobot
+
+logging.level.org.springframework=ERROR
+logging.level.org.idlo=DEBUG
+
+# Logging pattern for the console
+logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+
+# Logging pattern for file
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+logging.file=/org/idlo/puzzle/toyrobot/application.log
